--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="/assets/styles.css" rel="stylesheet" />
   <script src = "/dist/main.js" defer></script>
+  <center>
+  <h1> Post Pandemic Travel Destinations </h1>
+  </center>
 </head>
+<center>
 <body>
+  <img src = "/public/travelling.jpg" />
+  <form method='POST' action='/post-home'?_method=DELETE>
+    <div id = "options">
+      <button>Create New City</button>
+        <div class = "input"><input type = "text" placeholder = "Enter city here"></div>
+        <div class = "input"><input type = "text" placeholder = "Enter description here">
+      </div>
+   </div>
+ </form>
   <div id = "root"></div>
 </body>
+</center>
+
 </html>
